# Country-Codes

./: LICENSE  README.md  generate_table.py  pyproject.toml  requirements.txt  table.md
api/: __init__.py  main.py  models.py
api/routes/: blockchain.py  codes.py  isn.py  lookup.py  validate.py  voip.py
docs/: API_REFERENCE.md  ISN_SPECIFICATION.md  TESTING.md
icc/: __init__.py  blockchain.py  codes.py  core.py  data.py  exceptions.py  isn.py  sequence.py  voip.py
icc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_api.py  test_blockchain.py  test_codes.py  test_core.py  test_isn.py  test_sequence.py  test_voip.py
